<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/graph_layout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="22dp"
    android:orientation="horizontal"
    android:background="@drawable/divider"
    android:weightSum="100">

    <TextView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="30"
        android:gravity="center"
        android:textColor="@color/font"
        android:text="@string/order"
        />

    <TextView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="40"
        android:gravity="center"
        android:textColor="@color/font"
        android:text="@string/channel_name"
        />

    <TextView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="30"
        android:gravity="center"
        android:textColor="@color/font"
        android:text="@string/channel_is_on"
        />

</LinearLayout>