<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/renameText"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_margin="20sp"
        android:paddingStart="5dp"
        android:background="@drawable/shape_edit_text_border"
        android:maxLines="1"
        android:hint="@string/save_folder_name_input_msg"
        android:inputType="textPersonName" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/cancel"
            style="?attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel"
            android:textColor="#000"
            android:textStyle="bold" />

        <View
            android:id="@+id/divider"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_weight="0"
            android:background="@color/separator" />

        <Button
            android:id="@+id/ok"
            style="?attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/ok"
            android:textColor="@color/colorAccent"
            android:textStyle="bold" />
    </LinearLayout>
</LinearLayout>