<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:padding="10dp"
        android:textSize="16sp"
        android:textColor="@color/font"
        android:text="@string/select_step_msg"
        android:gravity="center"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp">

        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="5"/>

        <LinearLayout
            android:id="@+id/text_layout"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="35">

            <TextView
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textSize="16sp"
                android:text="재하하중 P"/>

        </LinearLayout>

        <FrameLayout
            android:layout_width="0dp"
            android:layout_weight="60"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/tv_edit"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="16sp"
                android:hint="@string/edit_text_placeholder_short"
                android:textColorHint="@color/lightFont"
                android:layout_margin="10dp"
                android:gravity="center"
                android:textColor="@color/font"
                android:maxLines="1"
                android:inputType="number"
                android:imeOptions="actionDone"
                android:background="@drawable/shape_edit_text_border" />

        </FrameLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:weightSum="100">

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="@color/font"
                android:gravity="center"
                android:spinnerMode="dropdown"
                android:textAlignment="center"
                android:textColor="@color/font"
                android:textSize="16sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="105dp">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/cancel"
            style="?attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel"
            android:textColor="@color/font"
            android:textStyle="bold" />

        <View
            android:id="@+id/divider"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_weight="0"
            android:background="@color/separator" />

        <Button
            android:id="@+id/ok"
            style="?attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/ok"
            android:textColor="@color/colorAccent"
            android:textStyle="bold" />
    </LinearLayout>
</LinearLayout>