<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/root_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/bottom_layout"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/bottom_layout"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:foreground="?android:attr/selectableItemBackground"
        android:focusable="true"
        android:clickable="true"
        app:layout_constraintBottom_toBottomOf="parent">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/bottom_left_layout"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:foreground="?android:attr/selectableItemBackground"
            android:focusable="true"
            android:clickable="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintWidth_percent="0.5">

            <CheckBox
                android:id="@+id/checkbox"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="20dp"
                android:textColor="@color/font"
                android:textStyle="bold"
                android:text="@string/all_select"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:buttonTint="@color/colorAccentImage"
                android:checked="true"/>

        </androidx.constraintlayout.widget.ConstraintLayout>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/bottom_right_layout"
            android:layout_width="0dp"
            android:layout_height="match_parent"

            app:layout_constraintStart_toEndOf="@+id/bottom_left_layout"
            app:layout_constraintWidth_percent="0.5">

            <TextView
                android:id="@+id/cancel_button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:textColor="@color/font"
                android:text="@string/cancel"
                android:textStyle="bold"
                android:gravity="center"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintWidth_percent="0.5"/>

            <TextView
                android:id="@+id/confirm_button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:textColor="@color/colorAccent"
                android:text="@string/ok"
                android:textStyle="bold"
                android:gravity="center"
                app:layout_constraintStart_toEndOf="@+id/cancel_button"
                app:layout_constraintWidth_percent="0.5"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>